# corevpn

./: BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  deny.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  docs.yml  release.yml  security.yml
crates/corevpn-auth/: Cargo.toml  README.md
crates/corevpn-auth/src/: error.rs  flow.rs  lib.rs  provider.rs  session.rs  token.rs
crates/corevpn-cli/: Cargo.toml  README.md
crates/corevpn-cli/src/: main.rs
crates/corevpn-config/: Cargo.toml  README.md
crates/corevpn-config/src/: client.rs  generator.rs  lib.rs  server.rs
crates/corevpn-core/: Cargo.toml  README.md
crates/corevpn-core/src/: error.rs  lib.rs  network.rs  session.rs  user.rs
crates/corevpn-crypto/: Cargo.toml  README.md
crates/corevpn-crypto/benches/: crypto_benchmarks.rs
crates/corevpn-crypto/src/: cert.rs  cipher.rs  error.rs  hmac_auth.rs  kdf.rs  keys.rs  lib.rs
crates/corevpn-protocol/: Cargo.toml  README.md
crates/corevpn-protocol/benches/: protocol_benchmarks.rs
crates/corevpn-protocol/src/: control.rs  data.rs  error.rs  lib.rs  opcode.rs  packet.rs  reliable.rs  session.rs  tls.rs
crates/corevpn-server/: Cargo.toml  README.md
crates/corevpn-server/src/: main.rs  server.rs  setup.rs
crates/corevpn-server/src/audit/: events.rs  formats.rs  mod.rs
crates/corevpn-server/src/audit/sinks/: aws.rs  azure.rs  elasticsearch.rs  file.rs  kafka.rs  mod.rs  oracle.rs  splunk.rs  syslog.rs  webhook.rs
crates/corevpn-server/src/connection_log/: anonymizer.rs  db_logger.rs  events.rs  file_logger.rs  logger.rs  memory_logger.rs  mod.rs  null_logger.rs
crates/corevpn-server/src/webui/: auth.rs  mod.rs  routes.rs  state.rs  templates.rs
crates/corevpn-ui/: Cargo.toml  README.md
crates/corevpn-ui/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
crates/corevpn-ui/src/views/: about.rs  logs.rs  mod.rs  profiles.rs  server_list.rs  settings.rs
crates/corevpn-ui/src/widgets/: connection_card.rs  mod.rs  server_list.rs  vpn_status.rs
deploy/: docker-compose.ghost.yaml  docker-compose.yaml
deploy/helm/corevpn/: Chart.yaml  values-ghost.yaml  values-production.yaml  values.yaml
deploy/helm/corevpn/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-server.yaml  deployment-web.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: README.md  package-lock.json  package.json
docs/public/: manifest.json  robots.txt  sitemap.xml
docs/src/: index.html  styles.css
docs/src/app/: app.config.ts  app.html  app.routes.ts  app.ts  icons.ts
docs/src/app/components/: callout.ts  code-block.ts  footer.ts  header.ts  sidebar.ts
docs/src/app/pages/: api.ts  configuration.ts  deployment.ts  getting-started.ts  ghost-mode.ts  home.ts
docs/src/app/services/: seo.service.ts
packaging/: README.md
packaging/alpine/: APKBUILD  corevpn-server.confd  corevpn-server.initd  corevpn-server.post-install  corevpn-server.pre-deinstall  corevpn-server.pre-install  corevpn-web.confd  corevpn-web.initd
packaging/archlinux/: PKGBUILD  corevpn-server.install  corevpn-server.service  corevpn-server.sysusers  corevpn-server.tmpfiles  corevpn-server@.service  corevpn-web.service
packaging/config/: README.Debian  README.rpm  config.toml.example  environment.example
packaging/debian/: changelog  control  copyright  corevpn-server.postinst  corevpn-server.postrm  corevpn-server.prerm  rules
packaging/openrc/: corevpn-server  corevpn-web
packaging/rpm/: corevpn.spec
packaging/scripts/: build-alpine.sh  build-arch.sh  build-deb.sh  build-rpm.sh  install.sh  uninstall.sh
packaging/systemd/: corevpn-server.service  corevpn-server@.service  corevpn-web.service
scripts/: publish.sh
