[package]
name = "corevpn-cli"
description = "CoreVPN command-line interface - VPN client with OAuth2 support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["vpn", "cli", "openvpn", "client", "networking"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[[bin]]
name = "corevpn"
path = "src/main.rs"

[dependencies]
corevpn-crypto = { workspace = true }
corevpn-core = { workspace = true }
corevpn-config = { workspace = true }
corevpn-auth = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
ratatui = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
