[package]
name = "corevpn-protocol"
description = "OpenVPN-compatible protocol implementation for CoreVPN"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["openvpn", "protocol", "vpn", "networking", "tls"]
categories = ["network-programming", "cryptography"]
readme = "README.md"

[dependencies]
corevpn-crypto = { workspace = true }
corevpn-core = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# TLS
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = "2"

# Networking
socket2 = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = "1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "protocol_benchmarks"
harness = false
