[package]
name = "corevpn-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CoreVPN Desktop UI - OpenVPN-style VPN client interface"

[[bin]]
name = "corevpn-gui"
path = "src/main.rs"

[dependencies]
# Internal crates
corevpn-core = { path = "../corevpn-core" }
corevpn-auth = { path = "../corevpn-auth" }
corevpn-config = { path = "../corevpn-config" }

# UI Framework
openkit = { path = "../../../openkit" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Async utilities
futures = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
