[package]
name = "corevpn-ui"
description = "CoreVPN Desktop UI - OpenVPN-style VPN client interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["vpn", "gui", "desktop", "openvpn", "client"]
categories = ["gui", "network-programming"]
readme = "README.md"
# Not published - requires local openkit with VPN widget extensions
publish = false

[[bin]]
name = "corevpn-gui"
path = "src/main.rs"

[dependencies]
# Internal crates
corevpn-core = { workspace = true }
corevpn-auth = { workspace = true }
corevpn-config = { workspace = true }

# UI Framework (local dependency with VPN widget extensions)
openkit = { path = "../../../openkit" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Async utilities
futures = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
